--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,99 @@
 annotated-types==0.7.0
 anyio==4.4.0
-certifi==2024.8.30
+appnope==0.1.4
+asttokens==2.4.1
+certifi==2024.7.4
+charset-normalizer==3.3.2
 click==8.1.7
+click-default-group==1.2.4
+coloredlogs==15.0.1
+comm==0.2.2
+dateparser==1.2.0
+debugpy==1.8.5
+decorator==5.1.1
 dnspython==2.6.1
 email_validator==2.2.0
-fastapi==0.112.2
+executing==2.0.1
+fastapi==0.110.3
 fastapi-cli==0.0.5
+fastembed==0.2.7
+filelock==3.15.4
+flatbuffers==24.3.25
+fsspec==2024.6.1
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
-httpx==0.27.2
-idna==3.8
+httpx==0.27.0
+huggingface-hub==0.20.3
+humanfriendly==10.0
+idna==3.7
+ipykernel==6.29.5
+ipython==8.26.0
+itsdangerous==2.2.0
+jedi==0.19.1
 Jinja2==3.1.4
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+loguru==0.7.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+matplotlib-inline==0.1.7
 mdurl==0.1.2
-pydantic==2.8.0
-pydantic_core==2.20.0
+mpmath==1.3.0
+nest-asyncio==1.6.0
+-e git+ssh://git@github.com/eswan18/now-and-here.git@c2d6aeccdea90f7da056243c73a9cf3ce56c71df#egg=now_and_here
+numpy==2.1.0
+onnx==1.16.2
+onnxruntime==1.19.0
+orjson==3.10.7
+packaging==24.1
+parso==0.8.4
+pexpect==4.9.0
+platformdirs==4.2.2
+pluggy==1.5.0
+prompt_toolkit==3.0.47
+protobuf==5.28.0
+psutil==6.0.0
+psycopg2==2.9.9
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pydantic==2.8.2
+pydantic-extra-types==2.9.0
+pydantic-settings==2.4.0
+pydantic_core==2.20.1
 Pygments==2.18.0
+pytailwindcss==0.2.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
+pytz==2024.1
 PyYAML==6.0.2
-rich==13.8.0
+pyzmq==26.2.0
+regex==2024.7.24
+requests==2.32.3
+rich==13.7.1
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
-SQLAlchemy==2.0.32
-starlette==0.38.4
-typer==0.12.5
+SQLAlchemy==2.0.33
+sqlite-fts4==1.0.3
+sqlite-utils==3.37
+sqlite-vss==0.1.2
+stack-data==0.6.3
+starlette==0.37.2
+sympy==1.13.2
+tabulate==0.9.0
+tokenizers==0.15.2
+tornado==6.4.1
+tqdm==4.66.5
+traitlets==5.14.3
+typer==0.9.4
 typing_extensions==4.12.2
+tzlocal==5.2
+ujson==5.10.0
+urllib3==2.2.2
 uvicorn==0.30.6
 uvloop==0.20.0
-watchfiles==0.24.0
-websockets==13.0.1
+watchfiles==0.23.0
+wcwidth==0.2.13
+websockets==13.0
