--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,7 @@ matplotlib-inline==0.1.7
 mdurl==0.1.2
 mpmath==1.3.0
 nest-asyncio==1.6.0
--e git+ssh://git@github.com/eswan18/now-and-here.git@c2d6aeccdea90f7da056243c73a9cf3ce56c71df#egg=now_and_here
+# -e git+ssh://git@github.com/eswan18/now-and-here.git@c2d6aeccdea90f7da056243c73a9cf3ce56c71df#egg=now_and_here
 numpy==2.1.0
 onnx==1.16.2
 onnxruntime==1.19.0
@@ -87,7 +87,8 @@ tokenizers==0.15.2
 tornado==6.4.1
 tqdm==4.66.5
 traitlets==5.14.3
-typer==0.9.4
+# typer==0.9.4
+typer>=0.12.3
 typing_extensions==4.12.2
 tzlocal==5.2
 ujson==5.10.0
