--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.13.3
 annotated-types==0.7.0
 anyio==4.4.0
 appnope==0.1.4
@@ -12,6 +13,7 @@ dateparser==1.2.0
 debugpy==1.8.5
 decorator==5.1.1
 dnspython==2.6.1
+ecdsa==0.19.0
 email_validator==2.2.0
 executing==2.0.1
 fastapi==0.110.3
@@ -35,28 +37,30 @@ Jinja2==3.1.4
 jupyter_client==8.6.2
 jupyter_core==5.7.2
 loguru==0.7.2
+Mako==1.3.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mpmath==1.3.0
 nest-asyncio==1.6.0
-# -e git+ssh://git@github.com/eswan18/now-and-here.git@c2d6aeccdea90f7da056243c73a9cf3ce56c71df#egg=now_and_here
 numpy==2.1.0
 onnx==1.16.2
 onnxruntime==1.19.0
 orjson==3.10.7
 packaging==24.1
 parso==0.8.4
+passlib==1.7.4
 pexpect==4.9.0
 platformdirs==4.2.2
 pluggy==1.5.0
 prompt_toolkit==3.0.47
 protobuf==5.28.0
 psutil==6.0.0
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyasn1==0.6.1
 pydantic==2.8.2
 pydantic-extra-types==2.9.0
 pydantic-settings==2.4.0
@@ -65,6 +69,7 @@ Pygments==2.18.0
 pytailwindcss==0.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-jose==3.3.0
 python-multipart==0.0.9
 pytz==2024.1
 PyYAML==6.0.2
@@ -72,6 +77,7 @@ pyzmq==26.2.0
 regex==2024.7.24
 requests==2.32.3
 rich==13.7.1
+rsa==4.9
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
@@ -87,8 +93,7 @@ tokenizers==0.15.2
 tornado==6.4.1
 tqdm==4.66.5
 traitlets==5.14.3
-# typer==0.9.4
-typer>=0.12.3
+typer==0.12.5
 typing_extensions==4.12.2
 tzlocal==5.2
 ujson==5.10.0
