--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ annotated-types==0.7.0
 anyio==4.4.0
 appnope==0.1.4
 asttokens==2.4.1
+bcrypt==4.2.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
