--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ alembic==1.13.3
 annotated-types==0.7.0
 anyio==4.4.0
 appnope==0.1.4
+astroid==3.3.5
 asttokens==2.4.1
 bcrypt==4.2.0
+black==24.10.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
@@ -13,6 +15,7 @@ comm==0.2.2
 dateparser==1.2.0
 debugpy==1.8.5
 decorator==5.1.1
+dill==0.3.9
 dnspython==2.6.1
 ecdsa==0.19.0
 email_validator==2.2.0
@@ -33,6 +36,7 @@ idna==3.7
 iniconfig==2.0.0
 ipykernel==6.29.5
 ipython==8.26.0
+isort==5.13.2
 itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.4
@@ -43,8 +47,10 @@ Mako==1.3.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.7
+mccabe==0.7.0
 mdurl==0.1.2
 mpmath==1.3.0
+mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 numpy==2.1.0
 onnx==1.16.2
@@ -53,6 +59,7 @@ orjson==3.10.7
 packaging==24.1
 parso==0.8.4
 passlib==1.7.4
+pathspec==0.12.1
 pexpect==4.9.0
 platformdirs==4.2.2
 pluggy==1.5.0
@@ -68,6 +75,7 @@ pydantic-extra-types==2.9.0
 pydantic-settings==2.4.0
 pydantic_core==2.20.1
 Pygments==2.18.0
+pylint==3.3.1
 pytailwindcss==0.2.0
 pytest==8.3.3
 pytest-asyncio==0.24.0
@@ -82,6 +90,7 @@ regex==2024.7.24
 requests==2.32.3
 rich==13.7.1
 rsa==4.9
+ruff==0.8.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
@@ -94,6 +103,7 @@ starlette==0.37.2
 sympy==1.13.2
 tabulate==0.9.0
 tokenizers==0.15.2
+tomlkit==0.13.2
 tornado==6.4.1
 tqdm==4.66.5
 traitlets==5.14.3
