Resolve warnings and improve test reliability

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,6 @@
 asyncio_mode = strict
 asyncio_default_fixture_loop_scope = module
 addopts = --disable-warnings -rA
-testpaths = tests  # Specify the directory containing test files
+testpaths = tests
+filterwarnings =
+    ignore:'crypt' is deprecated and slated for removal:DeprecationWarning
