--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,18 @@ anyio==4.4.0
     # via
     #   httpx
     #   starlette
+bcrypt==3.2.2
+    # via
+    #   -r requirements.in
+    #   passlib
 certifi==2024.8.30
     # via
     #   httpcore
     #   httpx
+cffi==1.17.1
+    # via bcrypt
+ecdsa==0.19.0
+    # via python-jose
 fastapi==0.115.5
     # via -r requirements.in
 h11==0.14.0
@@ -30,8 +38,16 @@ iniconfig==2.0.0
     # via pytest
 packaging==24.1
     # via pytest
+passlib[bcrypt]==1.7.4
+    # via -r requirements.in
 pluggy==1.5.0
     # via pytest
+pyasn1==0.6.1
+    # via
+    #   python-jose
+    #   rsa
+pycparser==2.22
+    # via cffi
 pydantic==2.8.2
     # via
     #   -r requirements.in
@@ -44,6 +60,12 @@ pytest==8.3.3
     #   pytest-asyncio
 pytest-asyncio==0.24.0
     # via -r requirements.in
+python-jose==3.3.0
+    # via -r requirements.in
+rsa==4.9
+    # via python-jose
+six==1.16.0
+    # via ecdsa
 sniffio==1.3.1
     # via
     #   anyio
