--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+psycopg2://dev:dev@localhost/tudu
+sqlalchemy.url = postgresql+psycopg2://dev:dev@localhost/tudu2
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
